# luigi_tutorial

./: Makefile  README.md  pyproject.toml
app/: task.py
app/conf/: luigi.cfg
outputs/: orders.csv  report.csv
